feat(milesight-gateway): init device offline timeout (#94)